<resources>
    <string name="app_name">HealthyDog</string>
    <string name="title_activity_login">"HealthyDog"</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Main Menü -->
    <string name="hunde_button">Dog 1</string>
    <string name="hund_hin_button">hinzufügen</string>


    <!-- Strings related to Hunde Menü -->
    <string name="health_button">Health</string>
    <string name="hundepass_button">Hundepass</string>
    <string name="routen_button">Routen</string>
    <string name="fitness_button">Fitness</string>
    <string name="aktivitaeten_button">Aktivitäten</string>
    <string name="wetter_button">Wetter</string>

    <!-- Strings related to FoodPlaner -->
    <string name="foodplaner_button">Foodplaner</string>
    <string name="scanner_button">Produktscanner</string>
    <string name="rezepte_button">Rezepte</string>

    <!-- Strings related to Hunde Pass -->
    <string name="name_textView">Chapeau</string>
    <string name="impfungenButton">Impfungen</string>
    <string name="arztTButton">Arzttermine</string>

    <!-- String related to Rezepte -->
    <string name="title_activity_rezepte">Rezepte</string>
    <string name="kat_button">Kategorien</string>
    <string name="filter_button">Filtern</string>
    <string name="mliste_button">Meine Liste</string>
    <string name="erstellen_button">Erstellen</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="imageView">essen</string>
    <string name="katText">Kategorie</string>
    <string name="zuZeitText">Zubereitungszeit</string>
    <string name="diffText">Schwierigkeit</string>
</resources>
