<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HundeMenue">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/health_button"
        android:id="@+id/health_button"
        android:layout_marginTop="74dp" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/fitness_button"
        android:id="@+id/fitness_button"
        android:layout_alignTop="@+id/health_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/hundepass_button"
        android:id="@+id/hundepass_button"
        android:layout_marginTop="109dp" android:layout_below="@+id/health_button"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/aktivitaeten_button"
        android:id="@+id/aktivitaeten_button"
        android:layout_alignTop="@+id/hundepass_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/routen_button"
        android:id="@+id/routen_button"
        android:layout_alignTop="@+id/wetter_button"
        android:layout_alignLeft="@+id/aktivitaeten_button"
        android:layout_alignStart="@+id/aktivitaeten_button"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/wetter_button"
        android:id="@+id/wetter_button"
        android:layout_marginTop="103dp" android:layout_below="@+id/hundepass_button"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
</RelativeLayout>
