<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".healthy.HealthyMenue">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/foodplaner_button"
        android:id="@+id/foodplaner_button"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:layout_marginTop="65dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner_button"
        android:id="@+id/scanner_button"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/foodplaner_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rezepte_button"
        android:id="@+id/rezepte_button"
        android:layout_below="@+id/scanner_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"/>
</RelativeLayout>
